k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-frontend
  namespace: hotel
spec:
  type: ClusterIP
  selector:
    app: hotel-frontend
  ports:
    - name: http
      port: 80          # 클러스터 내부에서 80번으로 접속
      targetPort: 3000  # 컨테이너(json-server) 포트
